<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="0dp">


        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/registration"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:nestedScrollingEnabled="true"
            android:orientation="vertical"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:theme="@style/Register"
            tools:context="com.example.eventcamp.AddNewEvent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/newevents_details"
                android:textSize="20sp"
                android:textStyle="bold" />

            <View
                android:layout_width="200dp"
                android:layout_height="1dp"
                android:background="@color/cardview_dark_background" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_EventName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/activity_horizontal_margin">

                <EditText
                    android:id="@+id/new_eventname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/newevents_event"
                    android:inputType="textPersonName"
                    android:maxLines="1"/>
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_EventSubtitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/activity_horizontal_margin">

                <EditText
                    android:id="@+id/new_eventsubtitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/newevents_eventsubtitle"
                    android:inputType="textPersonName"
                    android:maxLines="1"/>
            </android.support.design.widget.TextInputLayout>

            <EditText
                android:id="@+id/new_event_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginTop="8dp"
                android:hint="@string/newevents_date"
                android:inputType="date|none" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_EventVenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/activity_horizontal_margin">

                <EditText
                    android:id="@+id/new_eventvenue"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/newevents_venue"
                    android:inputType="textPersonName|textAutoComplete"
                    android:maxLines="1" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_EventDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/activity_horizontal_margin">

                <EditText
                    android:id="@+id/new_eventDescription"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:gravity="top"
                    android:hint="@string/newevents_description"
                    android:inputType="textMultiLine"
                    android:maxLength="150" />
            </android.support.design.widget.TextInputLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/newevents_uploadimg"
                android:textSize="20sp"
                android:textStyle="bold" />

            <View
                android:layout_width="200dp"
                android:layout_height="1dp"
                android:background="@color/cardview_dark_background" />

            <FrameLayout
                android:id="@+id/posterFrame"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp">

                <ImageButton
                    android:id="@+id/imgButton"
                    style="?android:attr/borderlessButtonStyle"
                    android:layout_width="200dp"
                    android:layout_height="130dp"
                    android:layout_gravity="top|center_horizontal"
                    android:background="@drawable/eventposter"
                    android:scaleType="centerCrop" />

                <TextView
                    android:id="@+id/new_eventImageMessage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal|center_vertical"
                    android:gravity="center"
                    android:text="CLICK HERE \nTO ADD EVENT POSTER" />

            </FrameLayout>



        </LinearLayout>

        <Button
            android:id="@+id/newevents_create"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center"
            android:background="@color/colorPrimary"
            android:padding="20dp"
            android:text="@string/newevents_submit"
            android:textColor="#ffffff"
            android:textSize="18sp" />
    </LinearLayout>
</ScrollView>