<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_background">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription=""
        app:srcCompat="@drawable/ic_kle_tech_logo"
        tools:ignore="ContentDescription" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_emailid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#424242"
        android:textColorHint="#757575"
        android:layout_below="@+id/imageView"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin">

        <EditText
            android:id="@+id/emailid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:backgroundTint="@color/colorPrimaryDark"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            tools:ignore="RtlHardcoded,UnusedAttribute" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/input_layout_emailid"
        android:layout_alignLeft="@+id/input_layout_emailid"
        android:layout_alignStart="@+id/input_layout_emailid"
        android:layout_below="@+id/input_layout_emailid"
        android:layout_marginTop="12dp"
        android:backgroundTint="@color/colorPrimaryDark"
        android:textColor="#424242"
        android:textColorHint="#757575"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin">

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            tools:ignore="RtlHardcoded,UnusedAttribute" />

    </android.support.design.widget.TextInputLayout>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="13dp"
        android:text="@string/orsignup"
        android:textAllCaps="true"
        android:textColor="#424242" />

    <Button
        android:id="@+id/login"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/input_layout_password"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="86dp"
        android:background="@color/colorPrimaryDark"
        android:onClick="onClickLogin"
        android:shadowRadius="10"
        android:text="@string/login"
        android:textColor="#E3F2FD" />

    <Button
        android:id="@+id/signup"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/login"
        android:layout_alignStart="@+id/login"
        android:layout_below="@+id/textView"
        android:layout_marginTop="15dp"
        android:background="@color/colorPrimaryDark"
        android:onClick="onClickSignup"
        android:shadowRadius="10"
        android:text="@string/signup"
        android:textColor="#E3F2FD"
        tools:ignore="RtlHardcoded" />

</RelativeLayout>