<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_signup"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_background"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.eventcamp.Signup">

    <android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        card_view:cardUseCompatPadding="true"
        android:elevation="6dp"
        card_view:cardCornerRadius="4dp">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="20dp"
            android:paddingTop="20dp"
            android:background="#33000000">
            <TextView
                android:id="@+id/signup_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/signup"
                android:gravity="center"
                android:textSize="30sp"
                android:layout_marginBottom="20dp"
                />
            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_signup_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="40dp"
                android:layout_below="@id/signup_title">
                <EditText
                    android:id="@+id/signup_username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="#424242"
                    android:textColorHint="#757575"
                    android:layout_below="@id/signup_title"
                    android:backgroundTint="@color/colorPrimaryDark"
                    android:hint="@string/fullname"
                    android:inputType="textPersonName"
                    tools:ignore="RtlHardcoded,UnusedAttribute" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_signup_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="40dp"
                android:layout_below="@+id/input_layout_signup_username">
                <EditText
                    android:id="@+id/signup_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="#424242"
                    android:textColorHint="#757575"
                    android:backgroundTint="@color/colorPrimaryDark"
                    android:ems="10"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    tools:ignore="RtlHardcoded,UnusedAttribute" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_signup_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="40dp"
                android:layout_below="@+id/input_layout_signup_email">
                <EditText
                    android:id="@+id/signup_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="#424242"
                    android:textColorHint="#757575"
                    android:backgroundTint="@color/colorPrimaryDark"
                    android:ems="10"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    tools:ignore="RtlHardcoded,UnusedAttribute" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_signup_confirmpassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="40dp"
                android:layout_below="@+id/input_layout_signup_password">
                <EditText
                    android:id="@+id/signup_confirmpassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="#424242"
                    android:textColorHint="#757575"
                    android:backgroundTint="@color/colorPrimaryDark"
                    android:ems="10"
                    android:hint="@string/confirmpassword"
                    android:inputType="textPassword"
                    tools:ignore="RtlHardcoded,UnusedAttribute" />
            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/signin_details"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/details"
                android:onClick="onClickSignup"
                android:background="@color/colorPrimary"
                android:textColor="#ffffff"
                android:layout_below="@+id/input_layout_signup_confirmpassword"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:padding="20dp"
                />
        </RelativeLayout>
    </android.support.v7.widget.CardView>
</RelativeLayout>
