<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_signup"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_background"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.eventcamp.Signup">

    <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:elevation="6dp"
        card_view:cardCornerRadius="4dp"
        card_view:cardUseCompatPadding="true">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#33000000"
            android:paddingBottom="20dp"
            android:paddingTop="20dp">

            <TextView
                android:id="@+id/signup_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:gravity="center"
                android:text="@string/signup_details"
                android:textSize="30sp" />
            <TextView
                android:id="@+id/section_branch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/section_branch"
                android:layout_below="@+id/signup_title"
                android:layout_marginLeft="40dp"
                />
            <View
                android:id="@+id/horizontalline_branch"
                android:layout_width="200dp"
                android:layout_height="2dp"
                android:layout_marginLeft="40dp"
                android:background="#c0c0c0"
                android:layout_below="@+id/section_branch"
                />

            <Spinner
                android:id="@+id/spinner_branch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:layout_below="@+id/horizontalline_branch"
                >
            </Spinner>
            <TextView
                android:id="@+id/section_year"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/section_year"
                android:layout_below="@+id/spinner_branch"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="10dp"
                />
            <View
                android:id="@+id/horizontalline_year"
                android:layout_width="100dp"
                android:layout_height="2dp"
                android:layout_marginLeft="40dp"
                android:background="#c0c0c0"
                android:layout_below="@+id/section_year"
                />
            <Spinner
                android:id="@+id/spinner_year"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="40dp"
                android:layout_below="@+id/horizontalline_year">

            </Spinner>
            <Button
                android:id="@+id/signup_b"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/section_next"
                android:background="@color/colorPrimary"
                android:textColor="#ffffff"
                android:layout_below="@+id/spinner_year"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:padding="20dp"
                />
        </RelativeLayout>
    </android.support.v7.widget.CardView>
</RelativeLayout>